# annunaki

./: .gitignore  Cargo.toml  index.html  index.ts  webpack.config.js
service/: Cargo.toml
src/: lib.rs
web/: Cargo.toml
web/client/: Cargo.toml  package.json  tsconfig.json
web/server/: Cargo.toml
web/server/src/: main.rs
web/src/: binary_splits.rs  lib.rs
