[package]
name = "femtoweb"
version = "0.1.0"
authors = ["Will Tokunaga <thrill.ssb@gmail.com>", "Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
web-sys = { version = "0.3.41", features = [] }
js-sys = "0.3.41"
